force-app/main/default/objects/ReservationLocation__c/ReservationLocation__c.object-meta.xml
<CustomObject>
    <label>Reservation Location</label>
    <nameField>
        <displayFormat>RL-{00000}</displayFormat>
        <label>Reservation Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>