force-app/main/default/objects/ReservationLocation__c/fields/CapacityOverride__c.field-meta.xml
<CustomField>
    <fullName>CapacityOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capacity Override</label>
    <type>Checkbox</type>
</CustomField>