force-app/main/default/objects/ReservationLocation__c/fields/LocationDate__c.field-meta.xml
<CustomField>
    <fullName>LocationDate__c</fullName>
    <formula>CASESAFEID(Location__c) + TEXT(ReservedDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Date</label>
    <type>Text</type>
</CustomField>