force-app/main/default/objects/ReservationLocation__c/fields/LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>LocationNumber__c</fullName>
    <formula>Location__r.LocationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Number</label>
    <type>Text</type>
</CustomField>