force-app/main/default/objects/ReservationLocation__c/fields/ProjectLocation__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Location</label>
    <referenceTo>ProjectLocation__c</referenceTo>
    <relationshipLabel>Reservation Locations</relationshipLabel>
    <relationshipName>Reservation_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>