force-app/main/default/objects/ReservationLocation__c/fields/ReservedDate__c.field-meta.xml
<CustomField>
    <fullName>ReservedDate__c</fullName>
    <label>Reserved Date</label>
    <type>Date</type>
</CustomField>